--- a/.github/workflows/verify-workload-identity.yml
+++ b/.github/workflows/verify-workload-identity.yml
@@ -26,8 +26,8 @@ jobs:
         id: auth
         uses: google-github-actions/auth@v2
         with:
-          workload_identity_provider: 'projects/cloudrun-hands-on-473403/locations/global/workloadIdentityPools/github/providers/github'
-          service_account: 'github-terraform@cloudrun-hands-on-473403.iam.gserviceaccount.com'
+          workload_identity_provider: projects/412410043737/locations/global/workloadIdentityPools/github/providers/github
+          service_account: github-terraform@cloudrun-hands-on-473403.iam.gserviceaccount.com
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
